Create templates partials

--- a/templates/features.mustache
+++ b/templates/features.mustache
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <title>Gherkins Detailer - Features List</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" />
+    {{> meta}}
   </head>
   <body>
     <header>
@@ -28,8 +26,6 @@
       </table>
       {{/list}}
     </main>
-    <footer>
-      Generated with <a href="https://github.com/silversonicaxel/gherkin-detailer/" target="_blank">gherkin-detailer</a> on the DATE at TIME.
-    </footer>
+    {{> footer}}
   </body>
 </html>
