Improve code readability

--- a/templates/files.mustache
+++ b/templates/files.mustache
@@ -17,11 +17,11 @@
           </tr>
         </thead>
         <tbody>
-          {{#gherkins}}
+          {{#files}}
           <tr>
             <td>{{.}}</td>
           </tr>
-          {{/gherkins}}
+          {{/files}}
         </tbody>
       </table>
       {{/list}}
