Add menu in the reports

--- a/templates/files.mustache
+++ b/templates/files.mustache
@@ -8,6 +8,9 @@
     <header>
       <h1>Gherkins Detailer - Files List</h1>
     </header>
+
+    {{> menu}}
+
     <main>
       {{#list}}
       <table>
