--- a/templates/features.mustache
+++ b/templates/features.mustache
@@ -8,6 +8,9 @@
     <header>
       <h1>Gherkins Detailer - Features List</h1>
     </header>
+
+    {{> menu}}
+
     <main>
       {{#list}}
       <table>
