--- a/templates/menu.mustache
+++ b/templates/menu.mustache
@@ -2,5 +2,6 @@
   <ul>
     <li><a href="./files.html">Files</a></li>
     <li><a href="./features.html">Features</a></li>
+    <li><a href="./scenarios.html">Scenarios</a></li>
   </ul>
 </nav>
