Add States, Actions and Outcomes report

--- a/templates/menu.mustache
+++ b/templates/menu.mustache
@@ -3,5 +3,8 @@
     <li><a href="./files.html">Files</a></li>
     <li><a href="./features.html">Features</a></li>
     <li><a href="./scenarios.html">Scenarios</a></li>
+    <li><a href="./states.html">States</a></li>
+    <li><a href="./actions.html">Actions</a></li>
+    <li><a href="./outcomes.html">Outcomes</a></li>
   </ul>
 </nav>
