--- a/src/templates/menu.mustache
+++ b/src/templates/menu.mustache
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a href="./files.html">Files</a></li>
+    <li><a href="./index.html">Files</a></li>
     <li><a href="./features.html">Features</a></li>
     <li><a href="./scenarios.html">Scenarios</a></li>
     <li><a href="./states.html">States</a></li>
