--- a/src/templates/actions.mustache
+++ b/src/templates/actions.mustache
@@ -23,12 +23,12 @@
         </thead>
         <tbody>
           {{#actions}}
-          <tr class="{{class}}">
+          <tr class="{{class}}" id="{{id}}">
             <td class="col-id">{{id}}</td>
             <td class="col-data">{{text}}</td>
             <td class="col-data">
               {{#similarities}}
-              {{.}}<br/>
+              <a href="./{{type}}.html#{{id}}">{{id}}</a><br/>
               {{/similarities}}
             </td>
           </tr>
