--- a/src/templates/files.mustache
+++ b/src/templates/files.mustache
@@ -28,7 +28,7 @@
             <td class="col-data">{{text}}</td>
             <td class="col-data">
               {{#similarities}}
-              {{.}}<br/>
+              <a href="./{{type}}.html#{{id}}" alt="{{text}}" title="{{text}}">{{id}}</a><br/>
               {{/similarities}}
             </td>
           </tr>
