Add improvement in Similarities column

--- a/src/templates/states.mustache
+++ b/src/templates/states.mustache
@@ -28,7 +28,7 @@
             <td class="col-data">{{text}}</td>
             <td class="col-data">
               {{#similarities}}
-              <a href="./{{type}}.html#{{id}}" title="{{text}}">{{id}}</a><br/>
+              <a href="./{{type}}.html#{{id}}" alt="{{text}}" title="{{text}}">{{text}} ({{id}})</a><br/>
               {{/similarities}}
             </td>
           </tr>
